--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,3 +1,16 @@
+[package]
+name = "contract"
+version = "1.0.0"
+authors = ["Near Inc <hello@near.org>"]
+edition = "2021"
+
+[lib]
+crate-type = ["cdylib"]
+
+[dependencies]
+near-sdk = "4.0.0"
+uint = { version = "0.9.3", default-features = false }
+
 [profile.release]
 codegen-units = 1
 opt-level = "z"
@@ -7,7 +20,4 @@ panic = "abort"
 overflow-checks = true
 
 [workspace]
-members = [
-  "donation-factory",
-  "donation-contract"
-]
+members = []
