--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-# Developer note: near.gitignore will be renamed to .gitignore upon project creation
-# dependencies
-node_modules
-/.pnp
-.pnp.js
+# Rust
+**/target
+**/Cargo.lock
 
-# build
-/out
-/dist
-/target
-target
+# TypeScript
+**/package-lock.json
+**/node_modules/
+**/build/
+**/yarn.lock
+**/.tsimp
 
-# keys
-/templates/react/neardev
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-/.cache
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Frontend
+**/dist/
+**/.parcel-cache
