--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ crate-type = ["cdylib", "rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-near-sdk = { version = "5.3.0", features = ["unstable"] }
+near-sdk = { version = "5.17.1", features = ["global-contracts", "unstable"] }
 
 [dev-dependencies]
-near-sdk = { version = "5.3.0", features = ["unit-testing"] }
+near-sdk = { version = "5.17.1", features = ["global-contracts", "unit-testing"] }
 near-workspaces = { version = "0.16.0", features = ["unstable"] }
 tokio = { version = "1.12.0", features = ["full"] }
 serde_json = "1"
