rework the idea of the factory example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+borsh = "1.5.7"
 near-sdk = { version = "5.17.1", features = ["global-contracts", "unstable"] }
 
 [dev-dependencies]
